--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
-
+<h1> Palak <3 Prateek </h1>
+  
+<p>
+  <img src="https://raw.githubusercontent.com/prat0318/palakprateek/gh-pages/palakprateek.jpg" alt="<3 <3" align="middle">
+</p>
